<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/transaction_background"
    android:id="@+id/llMain"
    android:layout_margin="@dimen/_5sdp"
  >

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_category"
       android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/tvAmount"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:hint="@string/zero"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@id/tvCategory"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:hint="@string/transaction_description" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescription"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textColor="@color/black"
        android:hint="@string/transaction_date" />

</RelativeLayout>