<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="userModel"
            type="com.ibv.transactions.userAuth.userVM.UserViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:background="@drawable/ibv2"/>

            <RelativeLayout
                android:id="@+id/rlFace"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/transaction_background"
               android:padding="@dimen/_10sdp"
                android:visibility="gone">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/face_recog"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/face_recog_new" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/face_recog">

                    <TextView
                        android:id="@+id/tvCred"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/add_another_user"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlLoginCred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:padding="@dimen/_15sdp"
                android:background="@drawable/login_background"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_login_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@android:color/white"
                    android:drawableStart="@drawable/token"
                    android:drawablePadding="20dp"
                    android:ems="8"
                    android:hint="@string/user"
                    android:maxLines="1"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text="@={userModel.loginId}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:error="@{userModel.isValidLoginId}" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_login_id"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@android:color/white"
                    android:drawableStart="@drawable/password"
                    android:drawablePadding="@dimen/_20sdp"
                    android:ems="8"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_7sdp"
                    android:singleLine="true"
                    android:text="@={userModel.password}"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    app:error="@{userModel.isValidPassword()}" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="@dimen/btn_height"
                    android:layout_below="@+id/et_login_password"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/login_btn_background"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>


</layout>